fixed bug with drop-down menu not showing on some pages

--- a/style.css
+++ b/style.css
@@ -593,6 +593,15 @@ div {
   margin-right: 0.5vw;
 }
 
+.container-pos{
+background-color: aqua;
+position: absolute;
+top: 90%;
+}
+
+.dropdown-menu{
+  z-index: 999;
+}
 
 
 
